2018-02-14  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-external-view): Fix regex for url's that contain uri
	'query' and or 'fragment' components ([emacs-w3m:12901]).

2018-02-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-string-match-url-components)
	(w3m-string-match-url-components-1, w3m-url-strip-fragment):
	Don't recognize a url fragment "#/foo" as a name attribution.

2018-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-gnome-bugzilla):
	Limit to <pre class="bz_comment_text">.  Thanks to Kevin Ryde
	([emacs-w3m:12890]).

2018-01-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-gnome-bugzilla): New ([emacs-w3m:12885]).

2018-01-19  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-user-agent-site-specific): Remove debug message.
	[emacs-w3m:12883]

2018-01-18  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-add-referer): Update for https support.
	(w3m-user-agent-site-specific-alist, w3m-user-agent-site-specific):
	New feature.
	(w3m-header-arguments, w3m-request-arguments): Integrate new feature.
	[emacs-w3m:12881]

2018-01-17  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-user-agent-change): New feature.
	(w3m-reload-this-page): Integrate new feature.
	(w3m-request-arguments, w3m-header-arguments): Ensure w3m and
	w3mmee honor `w3m-add-user-agent'.  [emacs-w3m:12876]

2018-01-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make `cd doc; make pdf' work again  [emacs-w3m:12875]

	This requires Texinfo the version >=6.3, and either (or both) of LuaTeX
	>=0.95 (i.e., TeXLive >=2016) or XeTeX >=0.9998 (i.e., TeXLive >=2012).

	* Makefile.in (clean): Use doc/Makefile's clean.

	* aclocal.m4 (AC_CHECK_TEXINFO): New function.

	* configure.in (MAKEINFO, TEXI2PDF): Check version.
	(TEXI2DVI, PTEX, PBIBTEX, DVIPDFMX, TEXI2PDF): Remove.

	* doc/Makefile.in (TEXI2DVI, PTEX, PBIBTEX, DVIPDFMX, TEXI2PDF): Remove.
	(PDFTEX): New internal variable.